# cpp-coures-homework

./: README.md  huffman_copression  mul.asm
BIGINT/: CMakeLists.txt  big_integer.cpp  big_integer.h  main.cpp
bigint_small_obj_opt/BIGINT_SMALL_OBJECT_OPTIMIZATION/: CMakeLists.txt  big_integer.cpp  big_integer.h  main.cpp  opt_vector.cpp  opt_vector.h
bigint_small_obj_opt/BIGINT_SMALL_OBJECT_OPTIMIZATION/gtest/: CMakeLists.txt
bigint_small_obj_opt/build-BIGINT_SMALL_OBJECT_OPTIMIZATION-Desktop-Default/: BIGINT_SMALL_OBJECT_OPTIMIZATION  BIGINT_SMALL_OBJECT_OPTIMIZATION.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
deque/: CMakeLists.txt  deque.cpp  deque.h  main.cpp
huffman_compression/build-huffman_compression-Desktop-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  compressed_snow2.cmpr  huffman_compression  huffman_compression.cbp
huffman_compression/huffman_compression/: CMakeLists.txt  encoded_vector.cpp  encoded_vector.h  huffman_coder.cpp  huffman_coder.h  huffmantree.cpp  huffmantree.h  main.cpp
list/: CMakeLists.txt  list.h  main.cpp
persistent_set/build-persistent_set-Desktop_Qt_5_9_1_GCC_64bit-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  persistent_set  persistent_set.cbp
persistent_set/persistent_set/: CMakeLists.txt  main.cpp  persistent_set.h  smart_shared_pointer.h
